--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -68,13 +68,15 @@
           <div class="col-lg-3 col-sm-6">
             <div class="card-box bg-green">
               <div class="inner">
-                <h3>{{bookings}}</h3>
-                <p>Total Students in the Department</p>
+                <h3>{{pk}}</h3>
+                <p>Edit profile</p>
               </div>
               <div class="icon">
                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
               </div>
-              <a href="#" class="card-box-footer"
+              <a
+                href="{% url 'counsellingUrls:dashboardPage' pk %}"
+                class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
