--- a/counsellingApp/templates/app/index.html
+++ b/counsellingApp/templates/app/index.html
@@ -38,37 +38,38 @@
 <div class="container">    
   <div class="row">
    {% for object in objects %}
-<div class=" col-sm-4">     
-      <div class="panel panel-primary" style="padding-bottom:5%;">
+<div class=" col-sm-3">     
+      <div class="panel panel-warning" style="padding-bottom:3%;">
         <div class="panel-heading">{{object.title}} {{object.firstName}} {{object.lastName}}</div>
         <div class="panel-body">
           {% if object.profile%}
           <img src="{{object.profile.url }}"   
-          class="img-responsive" style="width:40%;height:30%" alt="Image">
+          class="img-responsive" style="width:30%;height:20%;border-radius:35px" alt="Image">
         
         {% else %}
       <!----><img
         src="{% static 'media/download.png' %}"
         alt="profile"
-         class="img-responsive" style="width:30%;height:30%" alt="Image"
+         class="img-responsive" style="width:30%;height:20%" alt="Image"
       />
       {% endif %}
         
-        
         </div>
-        <div class="panel-footer" style="background-color:white;height: 30%;overflow-x:scroll"> {{object.about}}</div>
-     <center><a href="#popup_screen" id = "home_img"
-type="button" class="btn btn-info" 
+  <div class="panel-footer" style="background-color:white;height: 20%;overflow-y:scroll"> {{object.occupation}}</div>
+     <center><a href="#popup_screen"     
+      id = "home_img"
+       type="button" class="btn btn-warning" 
       >View More</a>
       </div>
       <br>
-      <br><br>
+      <br>
+      <br>
       <br>
       <br>
       <br>
     </div>
     
-    <div id="popup_screen">
+    <div id="popup_screen"  >
       
   <a href="#" class="cancel"><i class="far fa-times-circle"></i></a>
   
