--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -1145,12 +1145,12 @@ margin-bottom:2%;
     position: absolute;
     top: 0;
     width: 82%;
-    transform: translate(1%, 30%);
+    transform: translate(20%, 30%);
     justify-self: center;
     height: 450px;
     margin: 0 auto;
     z-index: 10;
-    display: none;
+    display:block;
     backdrop-filter: blur(1rem);
     box-shadow:inset 0px 0px 50px white;
     border-radius: 10px;
