--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -1,1 +1,128 @@
-{% load static %}
+{% load static %}{% include 'app/header.html'%}
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <style>
+      /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+      .row.content {
+        height: 550px;
+      }
+
+      /* Set gray background color and 100% height */
+      .sidenav {
+        background-color: #f1f1f1;
+        height: 100%;
+      }
+
+      /* On small screens, set height to 'auto' for the grid */
+      @media screen and (max-width: 767px) {
+        .row.content {
+          height: auto;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="colcontent">
+      <div class="col-sm-3 sidenav bg-info">
+        <center>
+          <h3
+            style="
+              color: white;
+              padding-bottom: 5px;
+              border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            "
+          >
+            Your Availability
+          </h3>
+        </center>
+
+        <center>
+          <ul class="nav nav-pills nav-stacked">
+            <li class="col-sm-10">
+              <a href="{% url 'counselling:dashboardPage' pk %}">Back</a>
+            </li>
+            <li class="col-sm-10"><a href="#">Age</a></li>
+            <li class="col-sm-10"><a href="#">Gender</a></li>
+            <li class="col-sm-10"><a href="#">Geo</a></li>
+          </ul>
+        </center>
+        <br />
+      </div>
+      <div class="col-lg-9">
+        <div class="well bg-info">
+          <h4 style="color: white"><i class="icon-dashboard"></i> Dashboard</h4>
+        </div>
+        <div style="height: 80%; width: 100%; overflow-x: scroll">
+          <div class="row">
+            <div class="col-sm-3">
+              <div class="well">
+                <h4>Users</h4>
+                <p>1 Million</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="well">
+                <h4>Pages</h4>
+                <p>100 Million</p>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+              <div class="well">
+                <h4>Bounce</h4>
+                <p>30%</p>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+              <div class="well">
+                <h4>Bounce</h4>
+                <p>30%</p>
+              </div>
+            </div>
+          </div>
+          <div class="row-right">
+            <div class="col-sm-4">
+              <div class="well">
+                <p>Text</p>
+                <p>Text</p>
+                <p>Text</p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="well">
+                <p>Text</p>
+                <p>Text</p>
+                <p>Text</p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="well">
+                <p>Text</p>
+                <p>Text</p>
+                <p>Text</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8">
+              <div class="well">
+                <p>Text</p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="well">
+                <p>Text</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
